<resources>
    <string name="app_name">LogpassExample</string>
    <string name="autorization">Авторизация</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="enter">Авторизоваться</string>
    <string name="enter_pass">Введите пароль</string>
    <string name="hint_login">Введите логин</string>
    <string name="splash_name">Заставка</string>
    <string name="splash">Заставка...</string>
    <string name="logo">Логотип</string>
    <string name="about_item">О программе</string>
    <string name="exit_item">Выход</string>
    <string name="pers_name">Имя персонажа</string>
    <string name="write_name">Записать имя</string>
</resources>