<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="28sp"
        android:textColor="#4D9303"
        android:text="@string/splash_name"
        android:padding="10dp"
        android:layout_marginBottom="20dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:src="@drawable/simoncat"
        android:id="@+id/my_image"
        android:contentDescription="@string/logo"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/splash"
        android:gravity="center_horizontal"
        android:textSize="28sp"
        android:textColor="#035593"/>
</LinearLayout>